Fixed scrollbar bug

--- a/src/styles/components/Navbar.module.css
+++ b/src/styles/components/Navbar.module.css
@@ -1,11 +1,11 @@
 .nav-items-container {
 	width: 100%;
-	margin-left: auto;
+	/* margin-left: auto; */
 	width: 66.66%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	transition: var(--app-collapse-transition-time);
 }
 
